[tool.poetry]
name = "fastapi-project"
version = "0.1.0"
description = "A FastAPI project with a single entry point."
authors = ["Shubham Mane <mane71396@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = "^0.31.0"
python-jose = "^3.3.0"
passlib = "^1.7.4"
cffi = "^1.17.1"
argon2-cffi = "^23.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"